CLear documentation on README.md